--- a/l11_wpf_mp_snake/MainWindow.xaml
+++ b/l11_wpf_mp_snake/MainWindow.xaml
@@ -38,7 +38,8 @@
             <ColumnDefinition Width="16"/>
             <ColumnDefinition Width="16"/>
             <ColumnDefinition Width="16"/>
-            <ColumnDefinition Width="16"/>
+            <ColumnDefinition Width="9.5"/>
+            <ColumnDefinition Width="6.5"/>
             <ColumnDefinition Width="16"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -78,5 +79,7 @@
         <Border Name="snakeHead" Background="Black" Grid.Column="8" Grid.Row="8"/>
         <Border Name="egg" Background="Red" Grid.Column="13" Grid.Row="18" Visibility="Collapsed"/>
         <Label x:Name="labelGameOver" Grid.ColumnSpan="18" Content="Game over" Grid.Column="5" Height="64" Margin="6,10,10,0" Grid.Row="12" Grid.RowSpan="5" VerticalAlignment="Top" Background="{x:Null}" Foreground="Red" FontSize="48" Visibility="Collapsed"/>
+        <TextBlock Name="textFPS" Text="0 FPS" Grid.Column="1" Grid.Row="1" FontSize="9" Grid.ColumnSpan="2"/>
+        <TextBlock Name="textMsUpdate" Text="0 ms" Grid.Column="3" Grid.Row="1" FontSize="9" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
